# denpabot

./: .gitignore  Cargo.toml  build_linux.sh  copy.sh
.cargo/: config.toml
src/: main.rs
